--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>         
     <footer>
-            <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+            <p>Site criado por Gabriel nascimento.</p>
     </footer>
 </body>
 </html>
